--- a/package.json
+++ b/package.json
@@ -5,18 +5,35 @@
   "main": "index.js",
   "scripts": {
     "commit": "git-cz",
+    "dev": "cross-env NODE_ENV=development nodemon src/index.ts",
     "docker:dev-db:start": "docker-compose -f docker-compose.only-db-dev.yml up -d",
     "docker:dev-db:stop": "docker-compose -f docker-compose.only-db-dev.yml down",
-    "migrate:dev": "npx prisma migrate dev"
+    "migrate:dev": "npx prisma migrate dev",
+    "db:studio": "prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "5.12.1",
-    "git-cz": "^4.9.0"
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.2.0",
+    "git-cz": "^4.9.0",
+    "helmet": "^7.1.0",
+    "http-status": "^1.7.4",
+    "joi": "^17.12.3",
+    "xss-filters": "^1.2.7"
   },
   "devDependencies": {
-    "prisma": "^5.12.1"
+    "@prisma/client": "^5.12.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-serve-static-core": "^4.17.43",
+    "@types/node": "^20.12.4",
+    "@types/xss-filters": "^0.0.30",
+    "cross-env": "^7.0.3",
+    "prisma": "^5.12.1",
+    "ts-node": "^10.9.2"
   }
 }
